# study-ai

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  image_reduction.py  pyproject.toml  requirements.txt  sandbox.ipynb  study.py  summarize_images.ipynb  summarize_pdf.ipynb  temp_format_notes_all.py  transcript_to_notes.py
.github/workflows/: tests.yaml
data/: vector_database.parquet
data/notes/: OMSCS_CS-6200_GIOS_BEEJS.yaml  OMSCS_CS-6200_GIOS_BEEJS_chapter_2.yaml  OMSCS_CS-6200_GIOS_BEEJS_chapter_3.yaml
source/cli/: utilities.py
source/entrypoints/: sandbox.ipynb
tests/: conftest.py  test_helpers.py  test_library_utilities.py  test_notes.py  test_pdf.py  test_search.py  test_study.py
tests/test_files/: duplicate_fake_notes.yaml  fake_history.yaml  fake_history_equal.yaml  fake_history_no_history.yaml  fake_notes.yaml  fake_notes_filtering.yaml  invalid_notes_no_uuids.yaml  notes1.yaml
tests/test_files/pdf/: attention_is_all_you_need__extracted_local.txt  attention_is_all_you_need__extracted_url.txt  attention_is_all_you_need_cleaned.txt
